# pulse

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.kafka  README.md  build.rs  docker-compose.yml  scenarios.yaml
.github/workflows/: ci.yml
docs/: architecture-decisions.md  benchmarks.md  compatibility.md  operational-safety.md  pod-security-baseline.md  reliability-testing.md  rollout-plan.md  runbook-drill-2026-03-03.md  runbook.md  slo-alerts.md  testing-plan.md
docs/adr/: ADR-0001-scheduler-worker-split.md  ADR-0002-redis-leader-election.md  ADR-0003-redis-idempotency-execution-attempt.md  ADR-0004-kafka-partition-key-strategy.md  ADR-0005-multi-layer-backpressure.md  ADR-0006-worker-retry-and-dlq.md  README.md
k8s/: configmap.yaml  deployment.yaml  grafana.yaml  kafka.yaml  kustomization.yaml  pdb.yaml  prometheus.yaml  pulse-service.yaml  redis.yaml  scenarios.k8s.yaml  serviceaccount.yaml
k8s/base/: configmap.yaml  deployment.yaml  grafana.yaml  kafka.yaml  kustomization.yaml  pdb.yaml  prometheus.yaml  rbac.yaml  redis.yaml  storage.yaml
k8s/dashboards/: pulse-runtime-dashboard.json
k8s/examples/: hpa-pulse.yaml  image-digests.example.yaml  networkpolicy-pulse.yaml  pdb-pulse.yaml  pulse-secret.example.yaml
ops/prometheus/: prometheus.yml
scripts/reliability/: check_performance_thresholds.sh  generate_ci_perf_artifacts.sh  generate_perf_history_page.py  generate_perf_report.py  soak_chaos.sh
src/: account.proto  main.rs
src/application/: metrics.rs  mod.rs  (+6 more)
tests/: integration_compose.rs  integration_runtime.rs
(+42 files in other folders)
